@@ -1,6 +1,14 @@
 0.9.1 [In developement]
 Got rid of autoconf/automake (Hooray!)
 Fixed a grid RA labeling bug.
+Improved the plug-in managment.
+Fixed nebula names loading (bug #1740287)
+Recoded time methods based on Qt time function (this fixed bug #1740595, LANG=en_IN crash).
+Made StelUI and StelCommandMgr real StelModules.
+Increased grid labeling brightness.
+Fixed splash screen flikering and logo image truncation in full screen mode.
+Fixed wrong nebula size (bug #1673142)
+Fixed constellation art intensity bug (bug #1733482)
 
 0.9.0 [2007-06-6]
 Larger star catalog including stars from Hiparcos, Tycho2 and NOMAD
